--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Investika</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">not rendered</div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
