--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <div id="root">not rendered</div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
